--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "create-react-component-folder": "^0.3.7",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "sass": "^1.80.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
